--- a/videos/index.html
+++ b/videos/index.html
@@ -210,6 +210,7 @@
                                 </br>
                                 <script async="async" data-cfasync="false" src="//cavitybetween.com/05dcad21cfafa1999376643a510647d1/invoke.js"></script>
 <div id="container-05dcad21cfafa1999376643a510647d1"></div>
+		<script type='text/javascript' src='//cavitybetween.com/65/8c/56/658c56019d1d2661fdc6f7a32f2b0b10.js'></script>
 <footer>
     <a class="mp-logo" href="register.php" aria-label="MaxPreps Homepage"><img src="img/mp_logo.webp" alt="MaxPreps Logo"></a>
     <div class="link-set link-set-social" data-js-hook="footer-social-links">
